Move the style definitions to QSS files

--- a/QtCalculator/QtCalculator.vcxproj.filters
+++ b/QtCalculator/QtCalculator.vcxproj.filters
@@ -52,4 +52,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="main.qss">
+      <Filter>Form Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
