--- a/QtCalculator/QtCalculator.vcxproj.filters
+++ b/QtCalculator/QtCalculator.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="CalculationResult.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CalculatorController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="Calculator.ui">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CalculatorController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
