--- a/QtCalculator/QtCalculator.vcxproj
+++ b/QtCalculator/QtCalculator.vcxproj
@@ -151,7 +151,10 @@
     <ResourceCompile Include="resources.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="QtCalculator-icon.ico" />
+    <Image Include="Resources\QtCalculator-icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\QtCalculator-icon.svg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
