--- a/QtCalculator/QtCalculator.vcxproj.filters
+++ b/QtCalculator/QtCalculator.vcxproj.filters
@@ -96,8 +96,13 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="QtCalculator-icon.ico">
+    <Image Include="Resources\QtCalculator-icon.ico">
       <Filter>Resource Files</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\QtCalculator-icon.svg">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
